--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 # Node.js
 node_modules/
-npm-debug.log
-yarn-error.log
+
+# Logs
+dist/
+build/
+
+# Docker
+.env
 
 # Logs
 logs
 *.log
-/logs
-
-# Docker
-.env
-docker-compose.override.yml
 
 # Editor e sistema operacional
 .DS_Store
