--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.6",
+    "@nestjs/schedule": "^4.1.1",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "rxjs": "^7.8.1",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^18.0.0",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.16",
     "jest": "^29.0.0",
     "ts-node": "^10.9.2",
