--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "- **Framework**: Nest.js\r - **Ambiente de Execução**: Node.js\r - **Integração com Banco de Dados**: TypeORM",
   "main": "index.js",
   "scripts": {
-    "build": "nest build",
+    "build": "nest build && npm run copy-index",
+    "copy-index": "copyfiles -u 1 ./index/**/* ./dist/index",
     "start": "nest start",
     "start:prod": "node dist/main.js",
     "test": "jest"
@@ -18,11 +19,13 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.6",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "mysql2": "^3.11.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -31,8 +34,11 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.0",
     "@types/node": "^18.0.0",
     "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^4.0.1",
+    "copyfiles": "^2.4.1",
     "jest": "^29.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
